--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-       --cor-fundo: #f89cef ;
-    --cor-principal: #7f348b ;
-    --cor-secundaria: #a78cd8; 
+       --cor-fundo: #ffffff ;
+    --cor-principal: #7baafb ;
+    --cor-secundaria: #0cfffbd6; 
     --cor-destaque: #000000;
     --cor-texto: #ffffff;
 
